--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.4.4",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.19",
