--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "short-uuid": "^4.2.0"
   }
 }
