--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "font-awesome": "^4.7.0",
+    "i": "^0.3.7",
+    "npm": "^8.17.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-color": "^2.19.3",
@@ -22,6 +25,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
