--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
+    "react-masonry-css": "^1.0.16",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
